Resolvendo estilização das tabelas do  programa